{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 14,
  "lineage": "09bb0f55-91bb-fc4d-7a3b-4a0ccc2e8ec2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "HiveKids-VM1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03f65b8614a860c29",
            "arn": "arn:aws:ec2:us-west-2:385797850962:instance/i-07be392ec897fb995",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07be392ec897fb995",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "RedKeys",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04c0993faad2a0f54",
            "private_dns": "ip-10-1-1-19.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.19",
            "public_ip": "34.215.52.6",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03f20ca183ec4429a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0facc290ccf53897c",
            "tags": {
              "Name": "HiveKids-VM1"
            },
            "tags_all": {
              "Name": "HiveKids-VM1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-037ff1a8c8466e5de"
            ]
          },
          "dependencies": [
            "aws_security_group.HiveKids_sg",
            "aws_subnet.HiveKids_subnet_a",
            "aws_vpc.HiveKids_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "HiveKids-VM2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03f65b8614a860c29",
            "arn": "arn:aws:ec2:us-west-2:385797850962:instance/i-0842390948e0f061e",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0842390948e0f061e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "RedKeys",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00d1fedadbdbd1aee",
            "private_dns": "ip-10-1-2-52.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.2.52",
            "public_ip": "34.210.197.148",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e1bce3a44bc2309d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0271cc7c59e7a3fa8",
            "tags": {
              "Name": "HiveKids-VM2"
            },
            "tags_all": {
              "Name": "HiveKids-VM2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-037ff1a8c8466e5de"
            ]
          },
          "dependencies": [
            "aws_security_group.HiveKids_sg",
            "aws_subnet.HiveKids_subnet_b",
            "aws_vpc.HiveKids_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "HiveKids_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:385797850962:internet-gateway/igw-094678ca468e7698d",
            "id": "igw-094678ca468e7698d",
            "owner_id": "385797850962",
            "tags": {
              "Name": "HiveKids_igw"
            },
            "tags_all": {
              "Name": "HiveKids_igw"
            },
            "vpc_id": "vpc-0cb4643a40dd6158c"
          },
          "dependencies": [
            "aws_vpc.HiveKids_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "HiveKids_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-094678ca468e7698d",
            "id": "r-rtb-0b2af9846a34513341080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b2af9846a3451334",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.HiveKids_igw",
            "aws_route_table.HiveKids_pub_rt",
            "aws_vpc.HiveKids_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "HiveKids_pub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:385797850962:route-table/rtb-0b2af9846a3451334",
            "id": "rtb-0b2af9846a3451334",
            "owner_id": "385797850962",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "HiveKids_pub_rt"
            },
            "tags_all": {
              "Name": "HiveKids_pub_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb4643a40dd6158c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.HiveKids_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "HiveKids_rta_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed79da764f1da25b",
            "route_table_id": "rtb-0b2af9846a3451334",
            "subnet_id": "subnet-0facc290ccf53897c"
          },
          "dependencies": [
            "aws_route_table.HiveKids_pub_rt",
            "aws_subnet.HiveKids_subnet_a",
            "aws_vpc.HiveKids_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "HiveKids_rta_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-052d57058f968e174",
            "route_table_id": "rtb-0b2af9846a3451334",
            "subnet_id": "subnet-0271cc7c59e7a3fa8"
          },
          "dependencies": [
            "aws_route_table.HiveKids_pub_rt",
            "aws_subnet.HiveKids_subnet_b",
            "aws_vpc.HiveKids_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "HiveKids_rta_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e699815dff50c85",
            "route_table_id": "rtb-0b2af9846a3451334",
            "subnet_id": "subnet-09c1b07245bfe5a8d"
          },
          "dependencies": [
            "aws_route_table.HiveKids_pub_rt",
            "aws_subnet.HiveKids_subnet_c",
            "aws_vpc.HiveKids_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "HiveKids_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:385797850962:security-group/sg-037ff1a8c8466e5de",
            "description": "Allow SSH and Web traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allows all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-037ff1a8c8466e5de",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH from any IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "HiveKids-sg",
            "name_prefix": "",
            "owner_id": "385797850962",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cb4643a40dd6158c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.HiveKids_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "HiveKids_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:385797850962:subnet/subnet-0facc290ccf53897c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0facc290ccf53897c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "385797850962",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "HiveKids_subnet_a"
            },
            "tags_all": {
              "Name": "HiveKids_subnet_a"
            },
            "vpc_id": "vpc-0cb4643a40dd6158c"
          },
          "dependencies": [
            "aws_vpc.HiveKids_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "HiveKids_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:385797850962:subnet/subnet-0271cc7c59e7a3fa8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0271cc7c59e7a3fa8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "385797850962",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "HiveKids_subnet_b"
            },
            "tags_all": {
              "Name": "HiveKids_subnet_b"
            },
            "vpc_id": "vpc-0cb4643a40dd6158c"
          },
          "dependencies": [
            "aws_vpc.HiveKids_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "HiveKids_subnet_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:385797850962:subnet/subnet-09c1b07245bfe5a8d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09c1b07245bfe5a8d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "385797850962",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "HiveKids_subnet_c"
            },
            "tags_all": {
              "Name": "HiveKids_subnet_c"
            },
            "vpc_id": "vpc-0cb4643a40dd6158c"
          },
          "dependencies": [
            "aws_vpc.HiveKids_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "HiveKids_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:385797850962:vpc/vpc-0cb4643a40dd6158c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0b18a023b51f2d026",
            "default_route_table_id": "rtb-0cb1f4880c859f2c4",
            "default_security_group_id": "sg-0c5b2ae320bc8225d",
            "dhcp_options_id": "dopt-0a636bbf9d1e9f10f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cb4643a40dd6158c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cb1f4880c859f2c4",
            "owner_id": "385797850962",
            "tags": {
              "Name": "HiveKids_vpc"
            },
            "tags_all": {
              "Name": "HiveKids_vpc"
            }
          }
        }
      ]
    }
  ]
}